--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,15 @@ services:
     command: server /data --console-address ":9090"
     volumes:
       - 'minio_data:/data'
+  redis:
+    image: redis:7
+    container_name: redis-heroes
+    ports:
+      - '6379:6379'
+    command: ['redis-server', '--save', '60', '1', '--loglevel', 'warning']
+    volumes:
+      - 'redis_data:/data'
 volumes:
   pg_data:
   minio_data:
+  redis_data:
